# OOPLabsNSU

lab3/: CMakeLists.txt
lab3/src/: ConfigParser.cpp  ConfigParser.h  Converter.cpp  Converter.h  WavFile.cpp  WavFile.h  main.cpp  test_main.cpp  test_main.h
lab4/: CMakeLists.txt
lab4/src/: CSVParser.h  main.cpp  test_main.cpp  test_main.h
